# cpp-template-default

./: CMakeLists.txt
proj.win32/: main.cpp
